--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,8 +1,8 @@
 @import "_mixins";
 
-$action-color: #ef7f1b;
+$action-color: #EF0918;
 $action-color-hover: darken($action-color, 5%);
-$font-color: #2d3235;
+$font-color: #36363F;
 $font-color-light: #b2b7bb;
 $border-color: #f3f3f4;
 $border-color-dark: darken($border-color, 10%);
