--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -15,7 +15,7 @@ $box-color-darker: darken($box-color, 15%);
 $green: #7DC73B;
 $green-hover: darken($green, 3%);
 $green-light: #B3F37B;
-$red: #DC363B;
+$red: #da0916;
 $red-hover: darken($red, 3%);
 $red-light: #E8676B;
 $orange-light: #FFDC78;
