--- a/css/layout.css
+++ b/css/layout.css
@@ -145,8 +145,8 @@
 }
 /* line 192, ../scss/layout.scss */
 .cms .ui-widget.gridfield-better-buttons-delete:active, .cms .ui-widget.gridfield-better-buttons-delete:hover, .cms .ui-widget.gridfield-better-buttons-delete:focus {
-  background: #da292e !important;
-  border-color: #da292e !important;
+  background: #da0916 !important;
+  border-color: #da0916 !important;
 }
 
 /* line 202, ../scss/layout.scss */
